<resources>
    <string name="app_name">Dream Mate</string>
    <string name="slogan">Find your Dream Mate!</string>
    <string name="login">Login</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot my password</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>


    <string name="email_hint">Enter your email address</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your full name</string>
    <string name="create_password_hint">Choose a secure password</string>
    <string name="insert_password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="reinsert_password_hint">Reenter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="unmatching_password">The passwords don\'t match!</string>
    <string name="server_unreachable">Can\'t reach the servers at this moment</string>
    <string name="fill_fields">All the fields must be filled</string>
    <string name="wrong_credentials">Wrong credentials</string>

    <string name="server_error">Something went wrong with your request</string>
    <string name="server_url">ybxeql9z91.execute-api.eu-central-1.amazonaws.com</string>

    <string name="create_profile">Create profile</string>
    <string name="tell_us_more">Tell us more about yourself!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_matches">Matches</string>
    <string name="title_profile">Profile</string>

    <string name="gender">Which is your gender?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="origin_country">Origin country</string>
    <string name="country_hint">Select your country</string>

    <string name="matches">MATCHES</string>
    <string name="details">Details</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_custom_list_view_acivity">CustomListViewAcivity</string>

    <string name="movies">Which kinds of movies do you like?</string>
    <string name="movie_hint">Select types of movies</string>
    <string name="date_of_birth">When were you born?</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="sleep_time">At what time do you usually go to sleep?*</string>
    <string name="origin_countries">Which countries do you come from?*</string>
    <string name="origin_countries_hint">Select countries</string>
    <string name="languages">Which languages can you speak?*</string>
    <string name="language_hint">Select languages</string>
    <string name="wanted_country">In which country are you looking for a flat?*</string>
    <string name="wanted_country_hint">Select country</string>
    <string name="wanted_city">And in which city?*</string>
    <string name="wanted_city_hint">Select city</string>
    <string name="move_in_date">Move in date*</string>
    <string name="move_out_date">Move out date</string>
    <string name="budget">What\'s your maximum monthly budget?*</string>
    <string name="select_date">Select date</string>
    <string name="budget_hint">Insert monthly budget</string>
    <string name="select_move_in">Please select the move in date first!</string>
    <string name="smoke">Do you smoke?*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="occupation">What do you do for a living?*</string>
    <string name="local_student">I\'m a local student</string>
    <string name="international_student">I\'m an international student</string>
    <string name="work">I work</string>
    <string name="finding">I\'m searching for meaning in life</string>
    <string name="radio_9_10">9:00-10:00</string>
    <string name="radio_10_12">10:00-12:00</string>
    <string name="radio_12_plus">12:00+</string>
    <string name="euro">€</string>
    <string name="description">About you!</string>
    <string name="description_hint">Tell the world about your taste in music, sports, games, activities, or anything else you like about yourself!</string>


    <string name="user_info_success">Your information has been successfully stored!</string>
    <string name="user_info_failure">Something went wrong, please try again</string>

    <string name="select_birth_date">Please select a birth date first!</string>
    <string name="select_gender">Please specify your gender!</string>
    <string name="select_sleep_time">Please specify your usual sleep time!</string>
    <string name="select_origin_countries">Please specify at least one origin country!</string>
    <string name="select_languages">Please specify at lest one language you speak!</string>
    <string name="select_destination_country">Please specify which country you want to live in!</string>
    <string name="select_destination_city">Please specify which city you want to live at!</string>
    <string name="select_arrival_date">Please choose the date you would like to arrive at the flat!</string>
    <string name="select_budget">Please specify a valid budget!</string>
    <string name="select_smoker">Please specify whether you\'re a smoker or not!</string>
    <string name="select_occupation">Please choose the occupation that best fits you!</string>
    <string name="select_country_first">Select a country first!</string>


    <string name="telephone">What is your telephone number?</string>
    <string name="select_telephone">Please enter your telephone number!</string>
    <string name="telephone_hint">Enter telephone number</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="smokes">Smokes</string>
    <string name="not_smokes">Doesn\'t smoke</string>
    <string name="detailsProfile">Details</string>
    <string name="originProfile">Originary from:</string>
    <string name="placeProfile">Looking for a place in:</string>
    <string name="fromProfile">From:</string>
    <string name="toProfile">To:</string>
    <string name="languagesProfile">Spoken languages:</string>
    <string name="budgetProfile">Budget:</string>
    <string name="sleepProfile">Usually sleeps at:</string>
    <string name="occupationProfile">Occupation:</string>
    <string name="descriptionProfile">Description</string>
    <string name="years">years</string>
    <string name="loading">Loading. Please wait...</string>

    <string name="brought_by">Brought to you by:</string>
    <string name="nuno">Nuno Nunes</string>
    <string name="maxime">Maxime Le Feuvre</string>
    <string name="teresa">Teresa Romão</string>
    <string name="lua">Luã Streit</string>

    <string name="your_matches">Your matches</string>
</resources>
