<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/registerLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registerDescription"
            app:srcCompat="@drawable/ic_logo2" />

        <TextView
            android:id="@+id/registerDescription"
            android:text="@string/register"
            style="@style/headerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerLogo"
            app:layout_constraintBottom_toTopOf="@id/registerNameText" />

        <TextView
            android:id="@+id/registerNameText"
            android:text="@string/name"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerDescription"
            app:layout_constraintBottom_toTopOf="@id/registerNameEdit" />

        <EditText
            android:id="@+id/registerNameEdit"
            android:hint="@string/name_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerLogo"
            app:layout_constraintBottom_toTopOf="@id/registerEmailText" />

        <TextView
            android:id="@+id/registerEmailText"
            android:text="@string/email"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerNameEdit"
            app:layout_constraintBottom_toTopOf="@id/registerEmailEdit" />

        <EditText
            android:id="@+id/registerEmailEdit"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerEmailText"
            app:layout_constraintBottom_toTopOf="@id/registerPassword1Text"/>

        <TextView
            android:id="@+id/registerPassword1Text"
            android:text="@string/create_password_hint"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerEmailEdit"
            app:layout_constraintBottom_toTopOf="@id/registerPassword1Edit" />

        <EditText
            android:id="@+id/registerPassword1Edit"
            android:inputType="textPassword"
            android:hint="@string/insert_password_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPassword1Text" />


        <TextView
            android:id="@+id/registerPassword2Text"
            android:text="@string/confirm_password_hint"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPassword1Edit"
            app:layout_constraintBottom_toTopOf="@id/registerPassword2Edit" />

        <EditText
            android:id="@+id/registerPassword2Edit"
            android:inputType="textPassword"
            android:hint="@string/reinsert_password_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPassword2Text"
            app:layout_constraintBottom_toTopOf="@id/registerSignUp"/>

        <Button
            android:id="@+id/registerSignUp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPassword2Edit"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>