<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loginDescription"
            app:srcCompat="@drawable/dreammate_logo" />

        <TextView
            android:id="@+id/loginDescription"
            android:text="@string/slogan"
            style="@style/headerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginLogo"
            app:layout_constraintBottom_toTopOf="@id/loginEmailText" />

        <TextView
            android:id="@+id/loginEmailText"
            android:text="@string/email"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginDescription"
            app:layout_constraintBottom_toTopOf="@id/loginEmailEdit" />

        <EditText
            android:id="@+id/loginEmailEdit"
            android:hint="@string/email_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginEmailText"
            app:layout_constraintBottom_toTopOf="@id/loginPasswordText"/>

        <TextView
            android:id="@+id/loginPasswordText"
            android:text="@string/password"
            style="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginEmailEdit"
            app:layout_constraintBottom_toTopOf="@id/loginPasswordEdit" />

        <EditText
            android:id="@+id/loginPasswordEdit"
            android:inputType="textPassword"
            android:hint="@string/insert_password_hint"
            style="@style/editTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordText"
            app:layout_constraintBottom_toTopOf="@id/loginForgotPassword" />

        <Button
            android:id="@+id/loginForgotPassword"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/forgot_pass"
            android:textSize="12sp"
            android:textColor="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordEdit"
            app:layout_constraintBottom_toTopOf="@id/loginSignIn" />

        <Button
            android:id="@+id/loginSignIn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginForgotPassword"
            app:layout_constraintBottom_toTopOf="@id/loginRegister" />

        <Button
            android:id="@+id/loginRegister"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/register"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSignIn"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>



</ScrollView>